--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,15 +14,6 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v2
 
-      - name: Install SSH Key
-        uses: shimataro/ssh-key-action@v2.3.1
-        with:
-          key: ${{ secrets.AWS_PEM }}
-          known_hosts: 'empty'
-
-      - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.AWS_HOST }} >> ~/.ssh/known_hosts
-
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
@@ -31,9 +22,26 @@ jobs:
 
       - name: Build the Docker image
         id: docker_build
-        run: |
-          docker-compose build --pull
-          docker-compose push
+        run: docker-compose build --pull
+
+      - name: Test nginx syntax
+      - run: docker-compose exec nginx nginx -t
+
+      - name: Push to Docker hub
+        run: docker-compose push
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [ push ]
+    steps:
+      - name: Server Login
+        uses: shimataro/ssh-key-action@v2.3.1
+        with:
+          key: ${{ secrets.AWS_PEM }}
+          known_hosts: 'empty'
+
+      - name: Adding Known Hosts
+        run: ssh-keyscan -H ${{ secrets.AWS_HOST }} >> ~/.ssh/known_hosts
 
       - name: Build the Docker image in the aws server
         uses: garygrossgarten/github-action-ssh@release
@@ -42,11 +50,9 @@ jobs:
             cd ${{ env.PROJECT_PATH }}
             export DOCKER_REGISTRY=$DOCKER_REGISTRY
             export DOCKER_TAG=$DOCKER_RELEASE_IMAGE
-            docker-compose stop nginx
-            docker-compose rm -f
+            docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
             docker-compose pull
-            docker-compose up -d
-            docker logout
+            docker-compose up -d --build
           host: ${{ secrets.AWS_HOST }}
           username: ${{ secrets.AWS_USER }}
           privateKey: ${{ secrets.AWS_PEM }}
