--- a/docker/prod/Dockerfile
+++ b/docker/prod/Dockerfile
@@ -8,3 +8,5 @@ WORKDIR $HOME
 COPY ./docker/prod/certbot.conf $HOME/user.conf.d/nginx_template.conf
 COPY ./docker/prod/proxy.conf $HOME/user.conf.d/proxy.conf
 COPY ./docker/prod/nginx.conf $HOME
+
+RUN nginx -t
