--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,6 @@ services:
       CERTBOT_EMAIL: gorelovmihail0@gmail.com
       # variable names are space-separated
       ENVSUBST_VARS: APP_BLOG APP_CHAT
-      APP_BLOG: blog.mikhail.jollymanager.com
-      APP_CHAT: chat.mikhail.jollymanager.com
+      APP_BLOG: www.django-blog.com
+      APP_CHAT: www.chat-microservice.com
     restart: always
